--- a/Rules
+++ b/Rules
@@ -1,4 +1,5 @@
 #!/usr/bin/env ruby
+# -*- coding: utf-8 -*-
 
 # A few helpful tips about the Rules file:
 #
@@ -21,7 +22,14 @@ compile '*' do
   if item.binary?
     # don’t filter binary items
   else
-    filter :erb
+    case item[:extension]
+    when /(^|\.)md$/
+      filter :kramdown
+    when /(^|\.)haml$/
+      filter :haml
+    when /(^|\.)erb$/
+      filter :erb
+    end
     layout 'default'
   end
 end
