--- a/Rules
+++ b/Rules
@@ -14,8 +14,26 @@
 #   item, use the pattern “/about/*/”; “/about/*” will also select the parent,
 #   because “*” matches zero or more characters.
 
-compile '/stylesheet/' do
-  # don’t filter or layout
+compile %r{/assets/(stylesheets|javascripts)/application.*} do
+  filter :sprockets, {
+    :css_compressor => :sass,
+    :js_compressor  => :uglifier
+  }
+end
+
+compile %r{/assets/(stylesheets|javascripts)/.+} do
+end
+
+route %r{/assets/(stylesheets|javascripts)/application.*} do
+  Nanoc::Helpers::Sprockets.asset_path(item)
+end
+
+route %r{/assets/(stylesheets|javascripts)/.*} do
+  nil
+end
+
+route %r{/assets/(images|fonts)/.*} do
+  Nanoc::Helpers::Sprockets.asset_path(item)
 end
 
 compile '*' do
@@ -32,10 +50,6 @@ compile '*' do
     end
     layout 'default'
   end
-end
-
-route '/stylesheet/' do
-  '/style.css'
 end
 
 route '*' do
