--- a/nanoc.yaml
+++ b/nanoc.yaml
@@ -75,3 +75,7 @@ watcher:
   # When to send notifications (using Growl or notify-send).
   notify_on_compilation_success: true
   notify_on_compilation_failure: true
+
+bootswatch:
+  theme:
+    "default"
