--- a/Rules
+++ b/Rules
@@ -44,7 +44,7 @@ end
 
 compile '*' do
   if item.binary?
-    # don’t filter binary items
+    # don't filter binary items
   else
     item[:extension].split(".").reverse.each do |ext|
       case ext
@@ -57,7 +57,13 @@ compile '*' do
       end
     end
     layout item[:layout] || "default"
+    snapshot :text
+    filter :gzip
   end
+end
+
+route '*', :snapshot => :text do
+  item.identifier + 'index.html'
 end
 
 route '*' do
@@ -66,7 +72,7 @@ route '*' do
     item.identifier.chop + '.' + item[:extension]
   else
     # Write item with identifier /foo/ to /foo/index.html
-    item.identifier + 'index.html'
+    item.identifier + 'index.html' + ".gz"
   end
 end
 
